Fix squished variable pair remove button

--- a/src/convoworks/editor/props/properties-editor.scss
+++ b/src/convoworks/editor/props/properties-editor.scss
@@ -188,6 +188,9 @@
             & .remove {
                 width: 20px;
                 height: 20px;
+
+                padding: 0;
+                line-height: 20px;
             
                 border-radius: 50%;
                 font-size: 9px;
